TestRepo2/src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Composite_Key__c</fullName>
        <externalId>true</externalId>
        <label>Brand Composite Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Generic_Brand__c</fullName>
        <label>Generic Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Brand__c</fullName>
        <label>Individual Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Classification__c</fullName>
        <label>Product Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Alcoholic Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Brand__c</fullName>
        <label>Report Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Brand__c</fullName>
        <label>Sub Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>